--- a/latex_resume/cv-sections/awardsandhonors.tex
+++ b/latex_resume/cv-sections/awardsandhonors.tex
@@ -10,7 +10,7 @@
 {Funding for Conference} % Affiliation/role
 {ADBI Funding for the 11th Conference on Asia and Pacific Economies} % Organization/group
 {\textbf{Sozhou, China}} % Locationhttps://www.overleaf.com/project/62e7f2be7c9e6bf410fb1377
-{May. 2024 - June. 2024} % Date(s)
+{May 2024 - June 2024} % Date(s)
 { % Description(s) of experience/contributions/knowledge
 \begin{cvitems}
 \item {Received a full scholarship from the Asian Development Bank Institute (ADBI), Japan, to present research at the 11th Conference on Asia and Pacific Economies, to be held at Xi’an Jiaotong‑Liverpool University (XJTLU), Suzhou, China}
@@ -34,7 +34,7 @@
 {Qualification} % Affiliation/role
 {UGC-NET in Economics } % Organization/group
 {\textbf{Online}} % Locationhttps://www.overleaf.com/project/62e7f2be7c9e6bf410fb1377
-{December 2022} % Date(s)
+{Dec. 2022} % Date(s)
 { % Description(s) of experience/contributions/knowledge
 \begin{cvitems}
 \item {Qualified UGC-NET in Economics in 2022 among 28576 appeared candidates.}
@@ -46,7 +46,7 @@
 {Summer School} % Affiliation/role
 {Future Leader in Development, IIM Udaipur} % Organization/group
 {\textbf{Udaipur, India}} % Locationhttps://www.overleaf.com/project/62e7f2be7c9e6bf410fb1377
-{June. 2018 - July. 2018} % Date(s)
+{June 2018 - July 2018} % Date(s)
 { % Description(s) of experience/contributions/knowledge
 \begin{cvitems}
 \item {Selected to participate in Summer School for Future Leaders in Development at IIM Udaipur in Collaboration with Sanford School of Public Policy, Duke University, USA.}
@@ -61,7 +61,7 @@
 {Fully Funded} % Affiliation/role
 {SDG Talent, UNLEASH Innovation Lab 2018 , Singapore} % Organization/group
 {\textbf{Singapore}} % Location
-{May. 2018 - June. 2018} % Date(s)
+{May 2018 - June 2018} % Date(s)
 { % Description(s) of experience/contributions/knowledge
 \begin{cvitems}
 \item {Selected to participate in the cohort of 1000 talents across the world to work on Sustainable Development Goals at Unleash Innovation Lab.}
@@ -75,7 +75,7 @@
 {Fully Funded} % Affiliation/role
 {Ministry of Rural Development Fellowship, IIT Bombay- MoRD} % Organization/group
 {\textbf{New Delhi, India}} % Location
-{July. 2017 - June. 2018} % Date(s)
+{July 2017 - June 2018} % Date(s)
 { % Description(s) of experience/contributions/knowledge
 \begin{cvitems}
 \item {Awarded the CTARA MoRD fellowship by IIT Bombay to research on social welfare programs of Ministry of Rural Development, Government of India.}
