--- a/latex_resume/cv-sections/education.tex
+++ b/latex_resume/cv-sections/education.tex
@@ -9,7 +9,7 @@
 {Doctor of Philosophy (PhD-Pursuing)} % Degree
 {Indian Institute of Management Shillong (IIM Shillong)} % Institute
 {\textbf{Shillong, India}} % Location
-{August. 2020 - PRESENT} % Date(s)
+{Aug. 2020 - PRESENT} % Date(s)
 { % Description(s) bullet points
 \begin{cvitems}
 \item {Specialization: Economics and Public Policy}
@@ -23,7 +23,7 @@
 {Master of Technology (MTech)} % Degree
 {Indian Institute of Technology Bombay (IIT Bombay)} % Institution
 {\textbf{Mumbai, India}} % Location
-{July. 2015 - July. 2017} % Date(s)
+{July 2015 - July 2017} % Date(s)
 { % Description(s) bullet points
 \begin{cvitems}
 \item {Specialization: Technology and Development (TD) at The Centre for Technology Alternatives for Rural Areas (CTARA)}
@@ -37,7 +37,7 @@
 {Bachelor of Engineering (BE)} % Degree
 {Dr. D. Y. Patil Institute of Technology, Savitribai Phule Pune University} % Institution
 {\textbf{Pune, India}} % Location
-{July. 2010 - July. 2014} % Date(s)
+{July 2010 - July 2014} % Date(s)
 { % Description(s) bullet points
 \begin{cvitems}
 \item {Specialization: Instrumentation Engineering}
