--- a/latex_resume/cv-sections/experience.tex
+++ b/latex_resume/cv-sections/experience.tex
@@ -15,7 +15,7 @@
 {Research Associate} % Job title
 {CSR Study Unit, IIT Bombay} % Organization
 {\textbf{Mumbai, India}} % Location
-{July. 2018 - Feb. 2019} % Date(s)
+{July 2018 - Feb. 2019} % Date(s)
 { % Description(s) of tasks/responsibilities
 \begin{cvitems}
 \item {Research Area: Doable, replicable, and scalable Best CSR Practices in India}
@@ -31,7 +31,7 @@
 {CTARA IITB Research Fellow} % Job title
 {Ministry of Rural Development (MoRD), Govt. of India} % Organization
 {\textbf{New Delhi, India}} % Location
-{July. 2017 - June. 2018} % Date(s)
+{July 2017 - June 2018} % Date(s)
 { % Description(s) of tasks/responsibilities
 \begin{cvitems}
 \item {Research Area: Identifying technical bottlenecks of Direct Benefit Transfer (DBT) under National Social Assistance Program (NSAP)}
