--- a/latex_resume/cv-sections/acadservices.tex
+++ b/latex_resume/cv-sections/acadservices.tex
@@ -5,10 +5,22 @@
 \begin{cvskills}
 \cvskill
 {Teaching Assistant} % Category
-{Managerial Economics, Macroeconomics, Industrial Organization, Infrastructure and Private Sector} % Skills
+{Managerial Economics [PGP-1]}
 
 \cvskill
-{Reviewer} % Category
+{} % Category
+{Macroeconomics [PGP-2]}
+
+\cvskill
+{} % Category
+{Industrial Organization [PGP-2, Elective]}
+
+\cvskill
+{} % Category
+{Infrastructure and Private Sector [PGP-2, Elective]}
+
+\cvskill
+{Journal Reviewer} % Category
 {Empirical Economics [ABDC-A]} % Skills
 
 \cvskill
@@ -18,6 +30,7 @@
 \cvskill
 {} % Category
 {Journal of Infrastructure, Policy and Development [\textit{Scopus-Q3}]} % Skills
+
 
 \end{cvskills}
 \relax
