--- a/latex_resume/resume.tex
+++ b/latex_resume/resume.tex
@@ -44,6 +44,7 @@
 \mobile{(+ 91) 77090-21424}
 \email{pawan.phd20@iimshillong.ac.in}
 \linkedin{pawankb13}
+\homepage{pawankamble}
 \position{\textbf{\\ Research Scholar} {\enskip\cdotp\enskip}{\textbf{Economics and Public Policy}}{\enskip\cdotp\enskip}} % Your expertise/fields
 
 \makecvfooter{\today}{Pawan Ashok Kamble ~~~·~~~Curriculum Vitae}{\thepage} % Specify the letter footer with 3 arguments: (<left>, <center>, <right>), leave any of these blank if they are not neededhttps://www.overleaf.com/project/62e7f2be7c9e6bf410fb1377
@@ -58,11 +59,13 @@
 \input{cv-sections/education.tex}
 \input{cv-sections/experience.tex}
 \newpage % Force a new page for looks
-\input{cv-sections/submitted_papers.tex}
+\input{cv-sections/publication.tex}
 \input{cv-sections/conferences.tex}
-\input{cv-sections/acadservices.tex}
+\input{cv-sections/workshops.tex}
 \newpage % Force a new page for looks
+\input{cv-sections/acadservices.tex}
 \input{cv-sections/awardsandhonors.tex}
+\newpage % Force a new page for looks
 \input{cv-sections/certifications.tex}
 \input{cv-sections/responsibilities.tex}
 \input{cv-sections/skills.tex}
