--- a/latex_resume/cv-sections/workshops.tex
+++ b/latex_resume/cv-sections/workshops.tex
@@ -14,7 +14,7 @@
 { % Description(s) of experience/contributions/knowledge
 \begin{cvitems}
 \item {Conducted 2 hours hand-on training workshop Zotero and Obsidian for Resource Management for Research}
-\item {Workshop Included: Managing research papers in Zotero | Citations in Microsoft Word and Latex | Introduction to R-Markdown}
+\item {Workshop Included: Managing research papers in Zotero | Citations in Microsoft Word and LATEX | Introduction to R-Markdown}
 \item {Attendees: Research Scholars, IIM Shillong}
 \end{cvitems}
 }
