--- a/latex_resume/cv-sections/awardsandhonors.tex
+++ b/latex_resume/cv-sections/awardsandhonors.tex
@@ -13,7 +13,7 @@
 {May 2024 - June 2024} % Date(s)
 { % Description(s) of experience/contributions/knowledge
 \begin{cvitems}
-\item {Received a full scholarship from the Asian Development Bank Institute (ADBI), Japan, to present research at the 11th Conference on Asia and Pacific Economies, to be held at Xi’an Jiaotong‑Liverpool University (XJTLU), Suzhou, China}
+\item {Received a full scholarship from the Asian Development Bank Institute (ADBI), Japan, to present research at the 11th Conference on Asia and Pacific Economies, held at Xi’an Jiaotong‑Liverpool University (XJTLU), Suzhou, China}
 \item {Paper titled 'Multidimensional Financial Resilience: An Ex‑ante Approach' was selected for the special ADBI Session on Digitization and Resilience.}
 \end{cvitems}
 }
