--- a/latex_resume/resume.tex
+++ b/latex_resume/resume.tex
@@ -71,6 +71,8 @@
 \input{cv-sections/skills.tex}
 \input{cv-sections/interest.tex}
 \input{cv-sections/personal.tex}
+\newpage
+\input{cv-sections/references.tex}
 
 
 %----------------------------------------------------------------------------------------
