--- a/resume_xelatex/cv-sections/education.tex
+++ b/resume_xelatex/cv-sections/education.tex
@@ -13,7 +13,7 @@
 { % Description(s) bullet points
 \begin{cvitems}
 \item {Specialization: Economics and Public Policy}
-\item{Thesis Title: Household  Financial Resilience: Conceptualization, Measurement, and Assessment of Impact of Shocks.}
+\item{Thesis Title: Multidimensional  Financial Resilience: Concept, Measure, and Assessment of Impact of Shocks.}
 \item {Relevant Course Work: Microeconomics, Macroeconomics, Fundamentals of Financial Markets and Financial Management, Quantitative Research Methods, Qualitative Research Methods, Business Research and Management.}
 \end{cvitems}
 }
