--- a/resume_latex/sections/responsibilities.tex
+++ b/resume_latex/sections/responsibilities.tex
@@ -3,9 +3,9 @@
 \hspace*{0.4cm}  % Shift right by 0.4 cm
     \begin{minipage}{\dimexpr\textwidth-1cm\relax}  % Minipage with width of text minus 1 cm
     \begin{tabular*}{\dimexpr\textwidth-1cm}{l l l r} % Two columns with stretched spacing
-            \CVTableTwo{IIM Shillong}{PhD Student Coordinator}{Institute Student Council}{2022-2023}
-            \CVTableTwo{IIM Shillong}{Research Space Coordinator}{PhD Research Space IIM Shillong}{2022-2023}
-            \CVTableTwo{IIM Shillong}{Conference Coordinator}{1st International Conference on Economics \& Public Poilcy \hspace{1.7cm}}{Sept.-2023}
-            \CVTableTwo{IIM Shillong}{Conference Coordinator}{Global Conference on Flexible Systems Management‑21}{2022-2023}
+            \CVTableTwo{IIM Shillong}{PhD Student Coordinator}{Institute Student Council}{2022 -- 2023}
+            \CVTableTwo{IIM Shillong}{Research Space Coordinator}{PhD Research Space IIM Shillong}{2022 -- 2023}
+            \CVTableTwo{IIM Shillong}{Conference Coordinator}{1st International Conference on Economics \& Public Poilcy \hspace{1.5cm}}{Sept. 2023}
+            \CVTableTwo{IIM Shillong}{Conference Coordinator}{Global Conference on Flexible Systems Management‑21}{April 2023}
         \end{tabular*}
 \end{minipage}
