Update: Githhub Site

--- a/resume_latex/sections/heading.tex
+++ b/resume_latex/sections/heading.tex
@@ -8,7 +8,7 @@
     \faPhone \hspace{3pt}{+91 7709021424} \\
     % \scshape sets small capital letters, remove if desired
     \faEnvelope \hspace{3pt} \href{mailto:pawan.phd20@iimshillong.ac.in}{pawan.phd20@iimshillong.ac.in} \\
-    \faGlobe \hspace{3pt} \href{https://sites.google.com/view/pawankamble}{sites.google.com/view/pawankamble}\\
+    \faGlobe \hspace{3pt} \href{https://pawankb13.github.io/}{pawankb13.github.io/}\\
     % you should adjust you website
     \faLinkedin \hspace{3pt} \href{https://www.linkedin.com/in/pawankb13/}{pawankb13}
     % you should adjust you linked in profile name to be professional and recognizable
