Update: Github Site

--- a/resume_xelatex/awesome-cv.cls
+++ b/resume_xelatex/awesome-cv.cls
@@ -444,7 +444,7 @@
         {}%
         {%
           \ifbool{isstart}{\setbool{isstart}{false}}{\acvHeaderSocialSep}%
-          \href{https://sites.google.com/view/\@homepage}{\faHome\acvHeaderIconSep\@homepage}%
+          \href{https://\@homepage}{\faHome\acvHeaderIconSep\@homepage}%
         }%
       \ifthenelse{\isundefined{\@github}}%
         {}%
