--- a/resume_xelatex/resume2.tex
+++ b/resume_xelatex/resume2.tex
@@ -44,7 +44,7 @@
 \mobile{(+ 91) 77090-21424}
 \email{pawan.phd20@iimshillong.ac.in}
 \linkedin{pawankb13}
-\homepage{pawankamble}
+\homepage{pawankb13.githhub.io}
 \position{\textbf{\\ Research Scholar} {\enskip\cdotp\enskip}{\textbf{Economics and Public Policy}}{\enskip\cdotp\enskip}} % Your expertise/fields
 
 \makecvfooter{\today}{Pawan Ashok Kamble ~~~·~~~Curriculum Vitae}{\thepage} % Specify the letter footer with 3 arguments: (<left>, <center>, <right>), leave any of these blank if they are not neededhttps://www.overleaf.com/project/62e7f2be7c9e6bf410fb1377
