--- a/resume_latex/sections/publications.tex
+++ b/resume_latex/sections/publications.tex
@@ -19,15 +19,15 @@
       {Research Articles}{}
       \CVItemListStart
         \CVItem{Measuring Multidimensional Financial Resilience: An Ex‑ante Approach with \textit{Atul Mehta and Neelam Rani}}\\ \vspace{2pt}
-        {Status: Under Review by the Social Indicators Research (Revised and Resubmit)} \\ \vspace{2pt}
+        {Status: Social Indicators Research (Revised and Resubmit)} \\ \vspace{2pt}
         {\color{Mahogany}(Category: ABDC-A)}
         
         \CVItem{Socioeconomic Determinants of the Financial Inclusion Gender Gap in India: A Comparative Analysis of Access vs Usage Dimensions \textit{with Atul Mehta}}\\ \vspace{2pt}
-        {Status: Submitted to Journal of Economic Issues (Revised and Resubmit)}\\ \vspace{2pt}
+        {Status: Review of Development Economics (Submitted)}\\ \vspace{2pt}
         {\color{Mahogany}(Category: ABDC-B)}
 
         \CVItem{Does financial literacy alleviate poverty? – New insights from a multidimensional approach  \textit{with Atul Mehta}}\\ \vspace{2pt}
-        {Status: Submitted to Review of Economics of the Household}\\ \vspace{2pt}
+        {Status: Review of Economics of the Household (Submitted)}\\ \vspace{2pt}
         {\color{Mahogany}(Category: ABDC-A)}     
       \CVItemListEnd
   \CVSubHeadingListEnd
