--- a/resume_xelatex/cv-sections/publication.tex
+++ b/resume_xelatex/cv-sections/publication.tex
@@ -29,12 +29,14 @@
 { % Description(s) of tasks/responsibilities
 \begin{cvitems}
 \item Measuring Multidimensional Financial Resilience: An Ex-ante Approach \textit{with} Atul Mehta and Neelam Rani\\
-Status: Under Review by the Social Indicators Research [Revision Submitted]\\
+Status: Social Indicators Research [Revised and Resubmit]\\
 {\color{red}[Category: ABDC-A]}
-\item Socioeconomic Determinants of the Financial Inclusion Gender Gap in India: A Comparative Analysis of Access vs Usage Dimensions \textit{with} Atul Mehta
-Status: Under Review by Journal of Economic Issues \\ 
+\item Socioeconomic Determinants of the Financial Inclusion Gender Gap in India: A Comparative Analysis of Access vs Usage Dimensions \textit{with} Atul Mehta \\
+Status: Review of Development Economics [Submitted] \\ 
 {\color{red}[Category: ABDC-B]}
-\item Does financial literacy alleviate poverty? – New insights from a multidimensional approach \textit{with} Atul Mehta
+\item Does financial literacy alleviate poverty? – New insights from a multidimensional approach \textit{with} Atul Mehta \\
+Status: Review of Economics the Household [Submitted] \\
+{\color{red}[Category: ABDC-A]}
 \end{cvitems}
 }
 \end{cventries}
