--- a/resume_latex/sections/heading.tex
+++ b/resume_latex/sections/heading.tex
@@ -10,7 +10,7 @@
     \faEnvelope \hspace{3pt} \href{mailto:pawan.phd20@iimshillong.ac.in}{pawan.phd20@iimshillong.ac.in} \\
     \faGlobe \hspace{3pt} \href{https://pawankb13.github.io/}{pawankb13.github.io}\\
     % you should adjust you website
-    \faLinkedin \hspace{3pt} \href{https://www.linkedin.com/in/pawankb13}{pawankb13}
+    \faLinkedin \hspace{3pt} \href{https://www.linkedin.com/in/pawankb13}{pawankb13_}
     % you should adjust you linked in profile name to be professional and recognizable
 \end{minipage}
 
