--- a/resume_latex/sections/experience.tex
+++ b/resume_latex/sections/experience.tex
@@ -8,7 +8,7 @@
 %        \CVItem{Why it is important to this employer}
 %      \CVItemListEnd
     \CVSubheading
-      {CSR Study Unit, IIT Bomba}{July 2018 -- Feb. 2019}
+      {CSR Study Unit, IIT Bombay}{July 2018 -- Feb. 2019}
       {Research Associate}{Mumbai, India}
       \CVItemListStart
         \CVItem{Research Area: Doable, replicable, and scalable Best CSR Practices in India}
