--- a/resume_latex/sections/miscellaneous.tex
+++ b/resume_latex/sections/miscellaneous.tex
@@ -7,6 +7,6 @@
             \CVTableEntry{Date of Birth}{September 13, 1992}{}
             \CVTableEntry{Languages}{English, Hindi, Marathi}{}
             \CVTableEntry{Marital Status}{Unmarried}{}
-            \CVTableEntry{Personal Website}{\color{blue}{\href{https://sites.google.com/view/pawankamble}{sites.google.com/view/pawankamble}}}{}
+            \CVTableEntry{Personal Website}{\color{blue}{\href{https://pawankb13.github.io}{pawankb13.github.io}}}{}
         \end{tabular*}
 \end{minipage}
