--- a/resume_latex/sections/publications.tex
+++ b/resume_latex/sections/publications.tex
@@ -8,7 +8,9 @@
       {Published Articles}{}
       {Research Articles}{}
       \CVItemListStart
-        \CVItem{\textbf{Kamble P. A}, Mehta, A., Rani N. (2023). Financial Inclusion and Digital Financial Literacy: Do they Matter for Financial Well-being? Social Indicators Research.171, 777–807 (2024), DOI:\href{https://doi.org/10.1007/s11205-023-03264-w}{\color{blue}10.1007/s11205-023-03264-w}}\\ \vspace{2pt}
+        \CVItem{\textbf{Kamble P. A}, Mehta, A., Rani N. (2024). Measuring Multidimensional Financial Resilience: An Ex‑ante Approach with \textit{Atul Mehta and Neelam Rani.}}{Forthcoming in Social Indicators Research} \\ \vspace{2pt}
+        {\color{Mahogany}(Category: ABDC-A)}
+        \CVItem{\textbf{Kamble P. A}, Mehta, A., Rani N. (2024). Financial Inclusion and Digital Financial Literacy: Do they Matter for Financial Well-being? Social Indicators Research.171, 777–807 (2024), DOI:\href{https://doi.org/10.1007/s11205-023-03264-w}{\color{blue}10.1007/s11205-023-03264-w}}\\ \vspace{2pt}
         {\color{Mahogany}(Category: ABDC-A)}
         \CVItem{M. P. Shah, \textbf{P. A. Kamble} and S. B. Agnihotri,Tackling child malnutrition: An innovative approach for training health workers using ICT a pilot study, 2016 IEEE Region 10 Humanitarian Technology Conference (R10-HTC), Agra, India, 2016, pp. 1- 6 DOI:\href{https://ieeexplore.ieee.org/abstract/document/7906811}{\space \color{blue}10.1109/R10-HTC.2016.7906811}} \\ \vspace{2pt}
         {\color{Mahogany}(Category: Scopus)}     
@@ -17,11 +19,7 @@
       \CVSubheading
       {Working Articles}{}
       {Research Articles}{}
-      \CVItemListStart
-        \CVItem{Measuring Multidimensional Financial Resilience: An Ex‑ante Approach with \textit{Atul Mehta and Neelam Rani}}\\ \vspace{2pt}
-        {Status: Social Indicators Research (Revised and Resubmit)} \\ \vspace{2pt}
-        {\color{Mahogany}(Category: ABDC-A)}
-        
+      \CVItemListStart        
         \CVItem{Socioeconomic Determinants of the Financial Inclusion Gender Gap in India: A Comparative Analysis of Access vs Usage Dimensions \textit{with Atul Mehta}}\\ \vspace{2pt}
         {Status: Review of Development Economics (Submitted)}\\ \vspace{2pt}
         {\color{Mahogany}(Category: ABDC-B)}
