--- a/resume_latex/sections/miscellaneous.tex
+++ b/resume_latex/sections/miscellaneous.tex
@@ -7,6 +7,8 @@
             \CVTableEntry{Date of Birth}{September 13, 1992}{}
             \CVTableEntry{Languages}{English, Hindi, Marathi}{}
             \CVTableEntry{Marital Status}{Unmarried}{}
-            \CVTableEntry{Personal Website}{\color{blue}{\href{https://pawankb13.github.io}{pawankb13.github.io}}}{}
+            \CVTableEntry{Permanent Address}{Katyayana, Plot No 9, Chaitanyashwar Nagar,}{}
+            \CVTableEntry{}{Kharbi Raod, Nagpur - 440034}{}
+            \CVTableEntry{}{Maharashtra}{}
         \end{tabular*}
 \end{minipage}
