--- a/resume_latex/sections/experience.tex
+++ b/resume_latex/sections/experience.tex
@@ -8,13 +8,23 @@
 %        \CVItem{Why it is important to this employer}
 %      \CVItemListEnd
     \CVSubheading
+    {State Health Systems Resource Centre (SHSRC), Govt. of Meghalaya}{Dec. 2024 -- Present}
+    {Senior Project Manager under UNICEF-IITB Project}{Shillong, India}
+    \CVItemListStart
+      \CVItem{Providing technical support for project management, research, impact evaluation, reporting, and reviewing health programs, as well as performance measurement in Meghalaya.}
+      \CVItem{Conducting State Health Accounting in alignment with National Health Accounting standards to assess the status of healthcare financing in the state.}
+      \CVItem{Identifying budget heads suitable for reallocation to Result-Based Financing initiatives for primary and secondary healthcare facilities in the state, aiming to enhance service delivery.}
+      \CVItem{Recruited District Health Associates to identify district-level healthcare gaps and delivered training on Human-Centric Design Interventions to develop innovative and sustainable solutions.}
+      \CVItem{Develop comprehensive policy briefs for the state health administration and UNICEF, providing in-depth analysis and actionable recommendations to enhance health outcomes.}
+    \CVItemListEnd
+    \CVSubheading
       {CSR Study Unit, IIT Bombay}{July 2018 -- Feb. 2019}
       {Research Associate}{Mumbai, India}
       \CVItemListStart
         \CVItem{Research Area: Doable, replicable, and scalable Best CSR Practices in India}
         \CVItem{Consultation with Central Public Sector Enterprises (CPSEs) and IIT Bombay for collaborations in CSR projects.}
         \CVItem{Involved in high‑quality support with project management, research, proposal writing, impact evaluation, reporting, CSR program review and performance measurement, and annual review of CSR trends.}
-        \CVItem{Organizing quarterly theme‑based CSR workshops various CSR stakeholders including -- PSUs, NGOs and Government Organizations}     
+        \CVItem{Organizing quarterly theme‑based CSR workshops for various CSR stakeholders including -- PSUs, NGOs and Government Organizations}     
       \CVItemListEnd
     \CVSubheading
       {Ministry of Rural Development (MoRD), Govt. of India}{July 2017 -- June 2018}
