--- a/resume_latex/sections/honors.tex
+++ b/resume_latex/sections/honors.tex
@@ -57,8 +57,8 @@
       \CVSubheading
       {Ministry of Rural Development Fellowship, IIT Bombay‑ MoRD}
       {May 2018 -- June 2022}
-      {Conference Funding}
       {Fellowship}
+      {New Delhi}
       \CVItemListStart
       \CVItem{Awarded the CTARA-MoRD Joint Fellowship by the Ministry of Rural Development, Government of India, and IIT Bombay to conduct research on government social welfare programs.} 
       \CVItemListEnd
