--- a/resume_latex/sections/education.tex
+++ b/resume_latex/sections/education.tex
@@ -10,7 +10,7 @@
         \CVItemListStart
         \CVItem{Specialization: Economics and Public Policy}
         \CVItem{Thesis Title: Multidimensional Financial Resilience: Concept, Measure and Assessment of Impact of Shocks.}
-        \CVItem{Relevant Course Work: Microeconomics, Macroeconomics, Industrial Organization, Indian Economy, Fintech and Financial Markets, Quantitative Research Methods.}
+        \CVItem{Relevant Course Work: Microeconomics, Macroeconomics, Econometrics, Industrial Organization, Indian Economy, Fintech and Financial Markets, Quantitative Research Methods.}
         %\CVItem{Overall CPI: 8.70/10}
         \CVItemListEnd
     \CVSubheading
