--- a/resume_latex/resume1.tex
+++ b/resume_latex/resume1.tex
@@ -18,7 +18,7 @@
 \usepackage{enumerate}
 \usepackage{fontawesome}
 \usepackage[dvipsnames]{xcolor}
-\input{glyphtounicode}
+
 
 
 % FONT OPTIONS ------------------------------------------------------------
@@ -122,7 +122,7 @@
 \input{sections/responsibilities.tex}
 \input{sections/skills.tex}
 \input{sections/interest.tex}
-\input{sections/miscellaneous.tex}
+%\input{sections/miscellaneous.tex}
 \input{sections/references.tex}
 
 \end{document}
