--- a/resume_latex/sections/education.tex
+++ b/resume_latex/sections/education.tex
@@ -6,7 +6,7 @@
 %      {Institution of Study}{Where it is located}
     \CVSubheading
       {{Indian Institute of Management Shillong (IIM Shillong)}}{Aug. 2020 -- Present}
-      {Doctor of Philosophy (PhD - Pursuing)} {Shillong, India}
+      {Doctor of Philosophy (PhD - Submitted)} {Shillong, India}
         \CVItemListStart
         \CVItem{Specialization: Economics and Public Policy}
         \CVItem{Thesis Title: Multidimensional Financial Resilience: Concept, Measure and Assessment of Impact of Shocks.}
