--- a/resume_latex/sections/honors.tex
+++ b/resume_latex/sections/honors.tex
@@ -30,8 +30,7 @@
       {Qualification}
       {Online}
       \CVItemListStart
-      \CVItem{Qualified UGC‑NET in Economics in 2022 among 28576 appeared candidates.}
-      \CVItem{Qualified for Assistant Professor in Economics posts.}     
+      \CVItem{Qualified UGC‑NET in Economics}     
       \CVItemListEnd
 
       \CVSubheading
