--- a/resume_latex/sections/references.tex
+++ b/resume_latex/sections/references.tex
@@ -12,7 +12,7 @@
       {Supervisor}
       \CVItemListStart
       \CVItemTwo{Economics and Public Policy Area}
-      \CVItemTwo{Email: \href{mailto:atul@iimshillong.ac.in}{\color{blue}atul@iimshillong.ac.in}}
+      \CVItemTwo{Email :\href{mailto:atul@iimshillong.ac.in}{\color{blue}atul@iimshillong.ac.in}}
       \CVItemListEnd
 
     \CVSubheading
@@ -22,7 +22,7 @@
       {Supervisor}
       \CVItemListStart
       \CVItemTwo{Finance and Control}
-      \CVItemTwo{Email: \href{mailto:neelam@iimshillong.ac.in}{\color{blue}neelam@iimshillong.ac.in}}
+      \CVItemTwo{Email :\href{mailto:neelam@iimshillong.ac.in}{\color{blue}neelam@iimshillong.ac.in}}
       \CVItemListEnd
 
     \CVSubheading
@@ -32,17 +32,17 @@
       {International Advisor}
       \CVItemListStart
       \CVItemTwo{Economics}
-      \CVItemTwo{Email: \href{mailto:prbharadwaj@ucsd.edu}{\color{blue}:prbharadwaj@ucsd.edu}}
+      \CVItemTwo{Email \href{mailto:prbharadwaj@ucsd.edu}{\color{blue}:prbharadwaj@ucsd.edu}}
       \CVItemListEnd
 
     \CVSubheading
       {Prof. Satish Agnihotri}
       {}
       {Professor (Emeritus Fellow) $|$ Indian Institute of Technology Bombay}
-      {Mentor}
+      {UNICEF-IITB Project PI}
       \CVItemListStart
       \CVItemTwo{Centre for Technology Alternatives for Rural Areas}
-      \CVItemTwo{Email: \href{mailto:sbagnihotri@iitb.ac.in}{\color{blue}:sbagnihotri@iitb.ac.in}}
+      \CVItemTwo{Email \href{mailto:sbagnihotri@iitb.ac.in}{\color{blue}:sbagnihotri@iitb.ac.in}}
       \CVItemListEnd
 
       
