--- a/resume_latex/resume1.tex
+++ b/resume_latex/resume1.tex
@@ -110,6 +110,8 @@
 % CV SECTIONS   %
 %-----------------------------------------------------
 \begin{document}
+
+
 \input{sections/heading.tex}
 \input{sections/education.tex}
 \input{sections/experience.tex}
@@ -124,6 +126,9 @@
 \input{sections/interest.tex}
 %\input{sections/miscellaneous.tex}
 \input{sections/references.tex}
+\vspace{3em}
+Last Updated on \today
+
 
 \end{document}
 %-----------------------------------------------------
