--- a/resume_latex/sections/publications.tex
+++ b/resume_latex/sections/publications.tex
@@ -8,7 +8,7 @@
       {Published Articles}{}
       {Research Articles}{}
       \CVItemListStart
-        \CVItem{\textbf{Kamble P. A}, Mehta, A., Rani N. (2024). Measuring Multidimensional Financial Resilience: An Ex‑ante Approach, Social Indicators Research. DOI:\href{https://doi.org/10.1007/s11205-024-03476-8}{\color{blue}10.1007/s11205-024-03476-8}}\\ \vspace{2pt}
+        \CVItem{\textbf{Kamble P. A}, Mehta, A., Rani N. (2024). Measuring Multidimensional Financial Resilience: An Ex‑ante Approach, Social Indicators Research. 1-35 DOI:\href{https://doi.org/10.1007/s11205-024-03476-8}{\color{blue}10.1007/s11205-024-03476-8}}\\ \vspace{2pt}
         \textbf{(Category: ABDC-A)} 
         \CVItem{\textbf{Kamble P. A}, Mehta, A., Rani N. (2024). Financial Inclusion and Digital Financial Literacy: Do they Matter for Financial Well-being? Social Indicators Research.171, 777–807. DOI:\href{https://doi.org/10.1007/s11205-023-03264-w}{\color{blue}10.1007/s11205-023-03264-w}}\\ \vspace{2pt}
         \textbf{(Category: ABDC-A)}
