--- a/resume_latex/resume1.tex
+++ b/resume_latex/resume1.tex
@@ -7,7 +7,7 @@
 \usepackage[empty]{fullpage}
 \usepackage{titlesec}
 \usepackage{marvosym}
-\usepackage[usenames,dvipsnames]{color}
+\usepackage[usenames,dvipsnames]{xcolor}
 \usepackage{verbatim}
 \usepackage{enumitem}
 \usepackage[hidelinks]{hyperref}
@@ -17,9 +17,6 @@
 \usepackage{array}
 \usepackage{enumerate}
 \usepackage{fontawesome}
-\usepackage[dvipsnames]{xcolor}
-
-
 
 % FONT OPTIONS ------------------------------------------------------------
 % serif
@@ -110,8 +107,6 @@
 % CV SECTIONS   %
 %-----------------------------------------------------
 \begin{document}
-
-
 \input{sections/heading.tex}
 \input{sections/education.tex}
 \input{sections/experience.tex}
@@ -128,7 +123,5 @@
 \input{sections/references.tex}
 \vspace{3em}
 Last Updated on \today
-
-
 \end{document}
 %-----------------------------------------------------
