--- a/resume_latex/sections/publications.tex
+++ b/resume_latex/sections/publications.tex
@@ -8,7 +8,7 @@
       {Published Articles}{}
       {Research Articles}{}
       \CVItemListStart
-        \CVItem{\textbf{Kamble P. A}, Mehta, A., Rani N. (2024). Measuring Multidimensional Financial Resilience: An Ex‑ante Approach, Social Indicators Research. 1-35 DOI:\href{https://doi.org/10.1007/s11205-024-03476-8}{\color{blue}10.1007/s11205-024-03476-8}}\\ \vspace{2pt}
+        \CVItem{\textbf{Kamble P. A}, Mehta, A., Rani N. (2025). Measuring Multidimensional Financial Resilience: An Ex‑ante Approach, Social Indicators Research. 176, 533–567. DOI:\href{https://doi.org/10.1007/s11205-024-03476-8}{\color{blue}10.1007/s11205-024-03476-8}}\\ \vspace{2pt}
         \textbf{(Category: ABDC-A)} 
         \CVItem{\textbf{Kamble P. A}, Mehta, A., Rani N. (2024). Financial Inclusion and Digital Financial Literacy: Do they Matter for Financial Well-being? Social Indicators Research.171, 777–807. DOI:\href{https://doi.org/10.1007/s11205-023-03264-w}{\color{blue}10.1007/s11205-023-03264-w}}\\ \vspace{2pt}
         \textbf{(Category: ABDC-A)}
@@ -20,8 +20,8 @@
       {Working Articles}{}
       {Research Articles}{}
       \CVItemListStart        
-        \CVItem{Does financial literacy alleviate poverty? – New insights from a multidimensional approach  \textit{with Atul Mehta} submitted to \textit{Review of Economics of the Household}. \textbf{(Category: ABDC-A)}}\\ \vspace{2pt}
-        \CVItem{Socioeconomic Determinants of the Financial Inclusion Gender Gap in India: A Comparative Analysis of Access vs Usage Dimensions \textit{with Atul Mehta}}\\ \vspace{2pt}
+        \CVItem{Does financial literacy alleviate poverty? – New insights from a multidimensional approach  \textit{with Atul Mehta} submitted to \textit{World Development}. \textbf{(Category: ABDC-A)}}\\ \vspace{2pt}
+        \CVItem{Socioeconomic Determinants of the Financial Inclusion Gender Gap in India: A Comparative Analysis of Access vs Usage Dimensions \textit{with Atul Mehta} submitted to \textit{Bulletin of Economic Research}. \textbf{(Category: ABDC-B)}}\\ \vspace{2pt}
         \CVItem{Household financial resilience and impact of shocks: Evidence from India \textit{with Atul Mehta}}\\ \vspace{2pt}
         \CVItem{Household financial resilience and impact of idiosyncratic and covariate shocks \textit{with Atul Mehta}}\\ \vspace{2pt}
         \CVItem{Determinants household financial resilience: a systematic literature review using ADO-TCM Framework \textit{with Atul Mehta}}\\ \vspace{2pt}
