--- a/resume_latex/sections/publications.tex
+++ b/resume_latex/sections/publications.tex
@@ -22,8 +22,8 @@
       \CVItemListStart        
         \CVItem{Does financial literacy alleviate poverty? – New insights from a multidimensional approach  \textit{with Atul Mehta} submitted to \textit{World Development}. \textbf{(Category: ABDC-A)}}\\ \vspace{2pt}
         \CVItem{Socioeconomic Determinants of the Financial Inclusion Gender Gap in India: A Comparative Analysis of Access vs Usage Dimensions \textit{with Atul Mehta} submitted to \textit{Bulletin of Economic Research}. \textbf{(Category: ABDC-B)}}\\ \vspace{2pt}
-        \CVItem{Household financial resilience and impact of shocks: Evidence from India \textit{with Atul Mehta}}\\ \vspace{2pt}
-        \CVItem{Household financial resilience and impact of idiosyncratic and covariate shocks \textit{with Atul Mehta}}\\ \vspace{2pt}
-        \CVItem{Determinants household financial resilience: a systematic literature review using ADO-TCM Framework \textit{with Atul Mehta}}\\ \vspace{2pt}
+        \CVItem{Household financial resilience and impact of shocks: Evidence from India}\\ \vspace{2pt}
+        \CVItem{Household financial resilience and impact of idiosyncratic and covariate shocks}\\ \vspace{2pt}
+        \CVItem{Determinants household financial resilience: a systematic literature review using ADO-TCM Framework}\\ \vspace{2pt}
       \CVItemListEnd
   \CVSubHeadingListEnd
