--- a/resume_latex/sections/publications.tex
+++ b/resume_latex/sections/publications.tex
@@ -20,7 +20,7 @@
       {Working Articles}{}
       {Research Articles}{}
       \CVItemListStart        
-        \CVItem{Does financial literacy alleviate poverty? – New insights from a multidimensional approach  \textit{with Atul Mehta} submitted to \textit{World Development}. \textbf{(Category: ABDC-A, Scopus-Q1)}}\\ \vspace{2pt}
+        \CVItem{Does financial literacy alleviate poverty? – New insights from a multidimensional approach  \textit{with Atul Mehta} submitted to \textit{The Journal of Economic Inequality}. \textbf{(Category: ABDC-A, Scopus-Q1)}}\\ \vspace{2pt}
         \CVItem{Socioeconomic Determinants of the Financial Inclusion Gender Gap in India: A Comparative Analysis of Access vs Usage Dimensions \textit{with Atul Mehta} submitted to \textit{Bulletin of Economic Research}. \textbf{(Category: ABDC-B, Scopus-Q3)}}\\ \vspace{2pt}
         \CVItem{Household financial resilience and impact of shocks: Evidence from India}\\ \vspace{2pt}
         \CVItem{Household financial resilience and impact of idiosyncratic and covariate shocks}\\ \vspace{2pt}
