--- a/resume_latex/sections/experience.tex
+++ b/resume_latex/sections/experience.tex
@@ -8,7 +8,7 @@
 %        \CVItem{Why it is important to this employer}
 %      \CVItemListEnd
     \CVSubheading
-    {State Health Systems Resource Centre (SHSRC), Govt. of Meghalaya}{Dec. 2024 -- Present}
+    {State Health Systems Resource Centre (SHSRC), Govt. of Meghalaya}{Dec. 2024 -- April 2025}
     {Senior Project Manager under UNICEF-IITB Project}{Shillong, India}
     \CVItemListStart
       \CVItem{Providing technical support for project management, research, impact evaluation, reporting, and reviewing health programs, as well as performance measurement in Meghalaya.}
